--- a/projeto_final/ToDoManager_ReactNative/package.json
+++ b/projeto_final/ToDoManager_ReactNative/package.json
@@ -9,13 +9,18 @@
   "dependencies": {
     "firebase": "^4.6.0",
     "react": "16.0.0-beta.5",
-    "react-native": "0.49.3",
-    "react-navigation": "^1.0.0-beta.15"
+    "react-native": "^0.49.3",
+    "react-navigation": "^1.0.0-beta.15",
+    "mobx": "^4.3.1",
+    "mobx-react": "^5.1.0"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react-native": "4.0.0",
+    "babel-preset-mobx": "^1.0.3",
     "jest": "21.2.1",
     "react-redux": "^5.0.7",
     "react-test-renderer": "16.0.0-beta.5",
